# plw-pytest-wse

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
tests/: test_auth.py  test_auth_api.py  test_english.py  test_home.py  test_navbar.py  test_navbar_anonymous.py  test_task_choice.py
tests/.auth/: save_auth_state.py
tests/auth/: save_auth_state.py
tests/task_math/: test_task_choice.py
tests/task_translate/: test_task_choice.py  test_task_demo.py
